[tool.poetry]
name = "macos-dep-reproducer"
version = "0.1.0"
description = ""
authors = ["Stefan Hansson <newbyte@postmarketos.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.8"
pyinstaller = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
